# skibidi-backend

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Readme  deploy.sh  railway.toml
src/: lightning.rs  main.rs
wallet_storage.sled/: db  snap.00000000000005AB  snap.0000000000000C9F  snap.0000000000000DF8
