[package]
name = "skibidi-wallet-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Enable blocking Esplora backend and BIP39 keys support; disable default features to avoid pulling in Electrum.
bdk = { version = "0.29", default-features = false, features = ["std", "keys-bip39", "use-esplora-blocking"] }
bdk-macros = "0.5"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
